# nn-chess-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  deploy.yaml
compact_board/: Cargo.toml
compact_board/src/: lib.rs
fish_teacher/: Cargo.toml
fish_teacher/src/: fish.rs  lib.rs  main.rs
position_extractor/: Cargo.toml
position_extractor/.cargo/: config.toml
position_extractor/src/: main.rs
tch_tchotchkes/: .gitignore  Cargo.toml
tch_tchotchkes/.cargo/: config.toml
tch_tchotchkes/src/: chess_board_tensor.rs  chess_dataset.rs  chess_evaluation_nn.rs  chess_move_nn.rs  lib.rs  main.rs  mnist_demo.rs
tch_tchotchkes/src/datasets/: mod.rs
tch_tchotchkes/src/models/: eval_narrow.rs  eval_superwide.rs  eval_wide.rs  mod.rs  move_rnn.rs
trie_farmer/: Cargo.toml
trie_farmer/src/: main.rs
trie_trimmer/: Cargo.toml
trie_trimmer/src/: main.rs
web_api/: Cargo.toml  Makefile
web_api/src/: engines.rs  main.rs
web_api/src/engines/: move_counter_strat.rs  narrow.rs  superwide.rs  wide.rs
web_types/: Cargo.toml
web_types/src/: lib.rs
