[package]
name = "position_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-io = "0.3.28"
pgn-reader = "0.25.0"
reqwest = { version = "0.11.22", features = ["stream"] }
shakmaty = "0.26.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
zstd = "0.13.0"
compact_board = { path = "../compact_board" }
radix_trie = { version = "0.2.1", features = ["serde"] }
serde = "1.0.189"
postcard = { version = "1.0.8", features = ["use-std"] }
rayon = "1.8.0"
