[package]
name = "tch_tchotchkes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tch = { git = "https://github.com/LaurentMazare/tch-rs" }
compact_board = {path = "../compact_board"}
fish_teacher = {path = "../fish_teacher"}
shakmaty = "0.26.0"
