[package]
name = "tch_tchotchkes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tch = { path = "../tch-rs" }
compact_board = {path = "../compact_board"}
fish_teacher = {path = "../fish_teacher"}
shakmaty = "0.26.0"
postcard = { version = "1.0.8", features = ["use-std"] }
tokio = { version = "1.33.0", features = ["sync", "full"] }
rand = "0.8.5"
