[package]
name = "trie_farmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", features = ["use-std"] }
radix_trie = { version = "0.2.1", features = ["serde"] }
tokio = { version = "1.33.0", features = ["full"] }
