[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.33.0", features = ["full"] }
web_types = { path = "../web_types" }
tch_tchotchkes = { path = "../tch_tchotchkes" }
shakmaty = "0.26.0"
fish_teacher = { version = "0.1.0", path = "../fish_teacher" }
lru = "0.12.0"
anyhow = "1.0.75"
tower-http = { version = "0.4.4", features = ["cors"] }
rand = "0.8.5"
